--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>やったぜ。<br>投稿者：変態糞土方</h1>
+      <h1>やったぜ。<br>投稿者：変態糞土方　8/16 07:14:22</h1>
       <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
